--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
@@ -1,9 +1,8 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <br>
 <div class="sixteen wide column">
-  <h2 class="ui header">ประเมินความเสี่ยงทั้งหมด</h2>
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-    <span>ระบุความเสี่ยง</span>
+    <span>การประเมินความเสี่ยงรายได้</span>
   </div>
   <div class="ui attached segment">
     <div class="ui form">
@@ -74,8 +73,8 @@
     <br>
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini primary button" (click)="exportFile()">
-          <i class="file excel outline icon"></i>ส่งออก</button>
+        <button class="ui mini yellow button" (click)="exportFile()">
+          <i class="print icon"></i>ส่งออก</button>
       </div>
     </div>
     <br>
