--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-5/int08-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-5/int08-5.component.html
@@ -1,9 +1,8 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <br>
 <div class="sixteen wide column">
-  <h2 class="ui header">ติดตามผลการตรวจสอบ</h2>
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-    <span>ระบุความเสี่ยง</span>
+    <span>ติดตามผลการตรวจสอบ</span>
   </div>
   <div class="ui attached segment">
     <div class="ui form">
