--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
@@ -5,12 +5,12 @@
     <div class="sixteen wide column">
 
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <span>เพิ่มเลขแบบพิมพ์</span>
+            <span>ตรวจสอบใบเสร็จรับเงินภาษีสรรพสามิต</span>
         </div>
         <!-- form add print no -->
         <div class="ui bottom attached segment">
             <div class="ui centered grid">
-                <div class="fourteen wide column">
+                <div class="sixteen wide column">
                     <form class="ui form" (submit)="addPrint($event)" #f="ngForm">
                         <div class="inline fields">
                             <div class="two wide field">
@@ -23,7 +23,7 @@
                                     <input type="text" id="keyC" name="permit_no" class="full-width" required [(ngModel)]='keyC' (keydown)="keyDownC()">
                                 </div>
                             </div>
-                            <div class="two wide field">
+                            <div class="one wide field">
                                 <label class="full-width text-right">
                                     เลขที่แบบพิมพ์
                                 </label>
@@ -33,7 +33,7 @@
                                     <input type="text" name="print_no" class="full-width" ngModel required>
                                 </div>
                             </div>
-                            <div class="two wide field">
+                            <div class="one wide field">
                                 <label class="full-width text-right">
                                     จำนวนเงิน
                                 </label>
@@ -43,9 +43,9 @@
                                     <input type="number" name="amount" class="full-width" ngModel required>
                                 </div>
                             </div>
-                            <div class="one wide field">
+                            <div class="two wide field">
                                 <button class="ui mini primary button" type="submit">
-                                    เพิ่ม / แก้ไข
+                                        <i class="clipboard check icon"></i>ตรวจสอบ
                                 </button>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                         <i class="save icon"></i>บันทึก
                     </button>
                     <a class="ui mini primary button widtd-100" routerLink='/int01/1/3'>
-                        <i class="file alternate outline icon"></i>ตรวจสอบงบสรุปยอดภาษี
+                        <i class="file alternate outline icon"></i>สรุปการใช้ใบเสร็จ
                     </a>
                     <!-- export -->
                     <button class="ui mini yellow button widtd-100">
