--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
@@ -89,6 +89,9 @@
         <div class="ui attached segment">
             <div class="ui center aligned grid">
                 <div class="eight wide column">
+                        <button class="ui yellow mini button" routerLink="">
+                            <i class="print icon"></i>ส่งออก
+                        </button>
                     <button class="ui mini button" routerLink="/int01/1/2">
                         <i class="close icon"></i>ยกเลิก
                     </button>
