--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
@@ -5,7 +5,7 @@
 
     <div class="sixteen wide column">
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <span>เพิ่มเลขแบบพิมพ์</span>
+            <span>ตรวจสอบใบอนุญาต</span>
         </div>
 
         <!-- form add print no -->
@@ -78,7 +78,7 @@
                     </a>
                     <a class="ui mini primary button widtd-100" (click)="nextPage()">
                         <i class="file alternate icon"></i>
-                        รายงานใบอนุญาต
+                        สรุปการใช้ใบอนุญาต
                     </a>
                     <a class="ui mini yellow button widtd-100">
                         <i class="print icon"></i>
