--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
@@ -121,6 +121,16 @@
           </tr>
         </thead>
       </table>
+
+      <div class="ui center aligned grid">
+        <div class="six wide column">
+            <button class="ui mini yellow button"  (click)="export()">
+                <i class="print icon"></i>
+                ส่งออก
+            </button>
+        </div>
+    </div>
+
     </div>
 
     <br>
