--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4.component.html
@@ -102,30 +102,21 @@
         <div class="ui segment" id="showData">
             <div class="ui grid center aligned">
                 <div class="sixteen wide column">
-                    <!-- {{firstDataList.companyName}} -->
+                    {{entrepreneur}}
                     <br> กระดาษทำการรับวัตถุดิบ
-                    <br> เดือน {{startDate}} - {{endDate}}
+                    <br> เดือน {{dateFrom}} - {{endDate}}
                 </div>
             </div>
             <br>
             <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
                 <thead>
                     <tr>
-                        <th style="text-align: center !important;" rowspan="2">ลำดับที่</th>
-                        <th style="text-align: center !important;" rowspan="2">รายการ</th>
-                        <th style="text-align: center !important;" colspan="3">ขอลดหย่อนภาษีตาม ภส.05-03</th>
-                        <th style="text-align: center !important;" colspan="4">ใบเสร็จรับเงิน</th>
-                        <th style="text-align: center !important;" rowspan="2">ผลต่าง</th>
-                    </tr>
-                    <tr>
-                        <th style="text-align: center !important;">จำนวนภาษี</th>
-                        <th style="text-align: center !important;">ปริมาณ</th>
-                        <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
-
-                        <th style="text-align: center !important;">เลขที่ใบเสร็จ</th>
-                        <th style="text-align: center !important;">จำนวนภาษี</th>
-                        <th style="text-align: center !important;">ปริมาณ</th>
-                        <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
+                        <th class="text-center">ลำดับที่</th>
+                        <th class="text-center">รายการ</th>
+                        <th class="text-center">ปริมาณรับจากการผลิต ตามงบเดือน</th>
+                        <th class="text-center">ปริมาณรับจากการผลิต แบบ ภส.07-02</th>                        
+                        <th class="text-center">ใบรับสินค้าสำเร็จรูป</th>
+                        <th class="text-center">ผลต่างคู่ข้อมูล</th>
                     </tr>
                 </thead>
 
