--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4.component.html
@@ -128,6 +128,10 @@
                         <i class="print icon"></i>
                         บันทึกข้อมูล
                     </button>
+                    <button class="ui mini yellow button"  (click)="export()">
+                        <i class="print icon"></i>
+                        ส่งออก
+                    </button>
                 </div>
             </div>
 
@@ -163,10 +167,6 @@
                 <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
                     <i class="reply icon"></i>
                     ย้อนกลับ
-                </button>
-                <button class="ui mini button" (click)="export()">
-                    <i class="reply icon"></i>
-                    export
                 </button>
             </div>
         </div>
