--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3.component.html
@@ -159,7 +159,7 @@
                             (change)="onChangeUpload($event)" required>
                     </div>
                     <div class="four wide field">
-                        <button class="ui mini primary button" type="submit">
+                        <button class="ui mini primary button" type="submit" [disabled]="uploadDisabled">
                             <i class="upload icon"></i>
                             อัพโหลด
                         </button>
@@ -179,3 +179,6 @@
         </div>
     </div>
 </div>
+<form id="form-data-excel" method="POST"> 
+    <input type="hidden" name="dataJson" id="dataJson">
+</form>
