--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
@@ -128,6 +128,7 @@
                 <i class="print icon"></i>
                 ส่งออก
             </button>
+            
         </div>
     </div>
 
@@ -167,3 +168,6 @@
     </div>
   </div>
 </div>
+<form id="form-data-excel" method="POST"> 
+  <input type="hidden" name="dataJson" id="dataJson">
+</form>
