--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4.component.html
@@ -102,9 +102,9 @@
         <div class="ui segment" id="showData">
             <div class="ui grid center aligned">
                 <div class="sixteen wide column">
-                    {{entrepreneur}}
+                    {{company}}
                     <br> กระดาษทำการรับวัตถุดิบ
-                    <br> เดือน {{dateFrom}} - {{endDate}}
+                    <br> เดือน {{dform}} - {{dTo}}
                 </div>
             </div>
             <br>
