--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-5/ope04-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-5/ope04-5.component.html
@@ -1,178 +1,177 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">กระดาษทำการจ่ายสินค้าสำเร็จรูป </h2>
+        <h2 class="ui header">กระดาษทำการจ่ายสินค้าสำเร็จรูป</h2>
 
-        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <span>Criteria</span>
+        <div class="ui top attached header segment" style="background: #1e83db;color: white">
+            <span>ระบุรายละเอียดกระดาษทำการ</span>
         </div>
-
-        <form ngNativeValidate (submit)="onClickShow($event)">
-            <div class="ui attached segment">
-                <div class="ui form">
-                    <div class="inline fields">
-                        <div class="eight wide field ">
-                            <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
-                            <select class="ui search dropdown ope04-1" name="exciseId" id="exciseId" (change)="changeExiseId()"
-                                style="width: 100% !important">
-                                <option *ngFor="let list of exciseIdArr">{{list}}</option>
-                            </select>
-                        </div>
-                        <div class="eight wide field ">
-                            <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
-                            <input type="text" name="taxNumber" id="taxNumber" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี"
-                                readonly="" value="-">
-                        </div>
+        <div class="ui attached segment {{loading ? 'loading' : ''}}">
+            <form class="ui form" id="form" [formGroup]="formControl" (submit)="search()">
+                <!-- row 1 -->
+                <div class="inline fields  ui grid">
+                    <div class="three wide field required">
+                        <label class="text-right full-width">ทะเบียนสรรพสามิต</label>
                     </div>
+                    <div class="four wide field" [ngClass]="{ 'error': submitted && f.exciseId.invalid }">
+                        <select name="exciseId" id="exciseId" formControlName="exciseId" class="ui dropdown ai search full-width office"
+                            (change)="changeExciseId($event)">
+                            <option value="">กรุณาเลือก</option>
+                            <option *ngFor="let item of exciseIdList" value="{{item.value}}">{{item.label}}</option>
 
-                    <div class="inline fields">
-                        <div class="eight wide field">
-                            <label class="custom-label-w-25">ผู้ประกอบการ </label>
-                            <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" [(ngModel)]="obj.companyName"
-                                name="companyName" id="companyName" readonly="">
-                        </div>
-                        <div class="eight wide field ">
-                            <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
-                            <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" [(ngModel)]="obj.analysNumber"
-                                name="analysNumber" id="analysNumber" readonly="">
-                        </div>
+                        </select>
                     </div>
-
-                    <div class="inline fields">
-                        <div class="eight wide field">
-                            <label class="custom-label-w-25">ประเภท </label>
-                            <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="-">
-                        </div>
-                        <div class="eight wide field ">
-                            <label class="custom-label-w-20">พิกัด</label>
-                            <input type="text" class="custom-readonly" placeholder="พิกัด" [(ngModel)]="obj.productType"
-                                name="productType" id="productType" readonly="">
-                        </div>
+                    <div class="three wide field ">
+                        <label class="text-right full-width">เลขประจำตัวผู้เสียภาษี</label>
                     </div>
+                    <div class="four wide field ">
+                        <input type="text" class="custom-readonly" formControlName="userNumber" disabled name="userNumber">
+                    </div>
+                </div>
 
-                    <div class="inline fields">
-                        <div class="three wide field">
-                            <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
-                        </div>
-                        <div class="four wide field">
-                            <div class="ui calendar" id="calendarFront" style="width:100%">
-                                <div class="ui input left icon">
-                                    <i class="calendar alter nate outline icon"></i>
-                                    <input type="text" name="startDate" id="startDate" [(ngModel)]="obj.startDate"
-                                        autocomplete="off" placeholder="ดด/ปปปป" [attr.required]="true">
-                                </div>
+                <!-- row 2 -->
+                <div class="inline fields  ui grid">
+                    <div class="three wide field ">
+                        <label class="text-right full-width">ผู้ประกอบการ</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" class="custom-readonly" disabled formControlName="entrepreneur" name="entrepreneur">
+                    </div>
+                    <div class="three wide field ">
+                        <label class="text-right full-width">เลขที่วิเคราะห์</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" class="custom-readonly" disabled formControlName="anlysisNumber" name="anlysisNumber">
+                    </div>
+                </div>
+
+                <!-- row 3 -->
+                <div class="inline fields  ui grid">
+                    <div class="three wide field ">
+                        <label class="text-right full-width">ประเภท</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" class="custom-readonly" disabled formControlName="type" name="type">
+                    </div>
+                    <div class="three wide field ">
+                        <label class="text-right full-width">พิกัด</label>
+                    </div>
+                    <div class="four wide field ">
+                        <input type="text" class="custom-readonly" disabled formControlName="coordinates" name="coordinates">
+                    </div>
+                </div>
+
+                <!-- row 4 -->
+                <div class="inline fields  ui grid">
+                    <div class="three wide field required">
+                        <label class="text-right full-width">รอบระยะเวลาการตรวจสอบ</label>
+                    </div>
+                    <div class="four wide field" [ngClass]="{ 'error': submitted && f.dateFrom.invalid }">
+                        <div class="ui calendar full-width" id="dateF">
+                            <div class="ui input left icon">
+                                <i class="clock icon"></i>
+                                <input name="dateFrom" type="text" id="dateFrom" formControlName="dateFrom"
+                                    autocomplete="off" [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
                             </div>
                         </div>
-                        <div class="four wide field">
-                            <label>-</label>
-                            <div class="ui calendar" id="calendarLast" style="width:100%">
-                                <div class="ui input left icon">
-                                    <i class="calendar alter nate outline icon"></i>
-                                    <input type="text" name="endDate" id="endDate" autocomplete="off" [(ngModel)]="obj.endDate"
-                                        [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
-                                </div>
-                            </div>
-                        </div>
                     </div>
-
-                    <br>
-                    <div class="ui center aligned grid">
-                        <div class="six wide column">
-                            <button class="ui mini primary button" type="submit">
-                                <i class="file icon"></i>
-                                แสดงกระดาษทำการ
-                            </button>
-                            <button class="ui mini button" type="reset">
-                                <i class="close icon"></i>
-                                ยกเลิก
-                            </button>
+                    <div class="three wide field required">
+                        <label class="text-right full-width">ถึง</label>
+                    </div>
+                    <div class="four wide field" [ngClass]="{ 'error': submitted && f.dateTo.invalid }">
+                        <div class="ui calendar full-width" id="dateT">
+                            <div class="ui input left icon">
+                                <i class="clock icon"></i>
+                                <input name="dateTo" type="text" id="dateTo" formControlName="dateTo" autocomplete="off"
+                                    [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </form>
+                <br><br>
+                <div class="ui stackable center aligned page grid">
+                    <button class="ui mini primary button" type="submit"><i class="file outline icon"></i>
+                        แสดงกระดาษทำการ</button>
+                    <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i>
+                        ล้างข้อมูล</button>
+                </div><br>
+            </form>
+        </div>
+
 
         <div class="ui segment" id="showData">
             <div class="ui grid center aligned">
                 <div class="sixteen wide column">
-                    {{firstDataList.companyName}}
+                    {{company}}
                     <br> กระดาษทำการรับวัตถุดิบ
-                    <br> เดือน {{startDate}} - {{endDate}}
+                    <br> เดือน {{dform}} - {{dTo}}
                 </div>
             </div>
             <br>
-            <div style="overflow-x: scroll;">
-                <table class="ui small celled table striped selectable" style="width: 120%;" id="showDt">
-                    <thead>
-                        <tr style="text-align: center;">
-                            <th>ลำดับที่</th>
-                            <th>รายการ</th>
-                            <th>ปริมาณจ่ายสิค้าสำเร็จรูปในใบกำกับภาษี
-                            </th>
-                            <th></th>
-                            <th>ปริมาณจากงบเดือน</th>
-                            <!-- {{row[0].column6}} -->
-                            <th>ปริมาณจากการตรวจสอบ</th>
-                            <th>ปริมาณจ่ายสินค้าสำเร็จรูป </th>
-                            <th>ผลต่าง</th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
+            <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
+                <thead>
+                    <tr>
+                        <th class="text-center">ลำดับที่</th>
+                        <th class="text-center">รายการ</th>
+                        <th class="text-center">ปริมาณรับจากการผลิต ตามงบเดือน</th>
+                        <th class="text-center">ปริมาณรับจากการผลิต แบบ ภส.07-02</th>                        
+                        <th class="text-center">ใบรับสินค้าสำเร็จรูป</th>
+                        <th class="text-center">ผลต่างคู่ข้อมูล</th>
+                    </tr>
+                </thead>
+
+            </table>
             <br>
             <div class="ui center aligned grid">
                 <div class="six wide column">
-                    <button class="ui mini primary button" (click)="saveTable()" type="button">
+                    <button class="ui mini primary button" (click)="save()" [disabled]="buttonDisabled">
                         <i class="print icon"></i>
                         บันทึกข้อมูล
                     </button>
-                    <button class="ui mini button" (click)="clearAll()" type="reset">
-                        <i class="refresh icon"></i>
-                        ล้างข้อมูล
+                    <button class="ui mini yellow button"  (click)="export()">
+                        <i class="print icon"></i>
+                        ส่งออก
                     </button>
                 </div>
             </div>
+
         </div>
 
-        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <div class="ui top attached header segment" style="background: #1e83db;color: white">
             <span>อัพโหลด Template ข้อมูลสำหรับการรับวัตถุดิบ</span>
         </div>
 
-        <form id="upload-form" ngNativeValidate (submit)="onUpload($event)">
-            <div class="ui attached segment">
-                <div class="ui form">
-                    <div class="inline fields">
-                        <div class="eight wide field ">
-                            <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
-                            <input type="file" name="fileExel" id="fileExel" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                                (change)="onChangeUpload($event)" required>
-                        </div>
+        <div class="ui attached segment {{loading ? 'loading' : ''}}">
+            <form class="ui form" id="upload-form">
+                <!-- row 1 -->
+                <div class="inline fields  ui grid">
+                    <div class="three wide field ">
+                        <label class="text-right full-width">ไฟล์อัปโหลด</label>
+                    </div>
+                    <div class="four wide field {{loading ? 'loading' : ''}}">
+                        <input class="inputfile" type="file" name="fileName" id="fileName" (change)="onChangeUpload($event)"
+                            accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" title="อัปโหลด Template ข้อมูลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)">
+                    </div>
+                    <div class="three wide field ">
+                        <button class="ui mini primary button" (click)="upload()" [disabled]="uploadDisabled"><i class="upload icon"></i>อัปโหลด</button>
+                    </div>
+                    <div class="four wide field ">
+
                     </div>
                 </div>
-
-                <div class="ui center aligned grid">
-                    <div class="four wide column">
-                        <button class="ui mini primary button" type="submit">
-                            <i class="upload icon"></i>
-                            อัพโหลด
-                        </button>
-                        <button class="ui mini button" type="reset">
-                            <i class="trash outline icon"></i>
-                            ลบไฟล์
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </form>
-
+            </form>
+        </div>
         <br>
         <div class="ui grid center aligned">
             <div class="sixteen wide column">
                 <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
-                    <i class="arrow left icon"></i>
+                    <i class="reply icon"></i>
                     ย้อนกลับ
                 </button>
             </div>
         </div>
     </div>
 </div>
+<form id="form-data-excel" method="POST"> 
+    <input type="hidden" name="dataJson" id="dataJson">
+</form>
