--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-13/int06-13.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-13/int06-13.component.html
@@ -133,7 +133,7 @@
                         <label>เงินเดือนตั้งแต่</label>
                     </div>
                     <div class="four wide field ">
-                        <input type="text"  name="salaryFrom" [(ngModel)]="dataEdit.salaryFrom" (keypress)="typeNumber($event)" (keyup)="onKey($event)">
+                        <input type="text"  name="salaryFrom" [(ngModel)]="dataEdit.salaryFrom"  (keypress)="typeNumber($event)" >
                     </div>
                     <div class="one wide field ">
                         <label>บาท</label>
