--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -119,7 +119,7 @@
                                 <tr style="text-align: center !important">
                                     <th rowspan="2">ลำดับที่</th>
                                     <th rowspan="2">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
-                                    <th rowspan="2" style="text-align: center !important">เลขทะเบียนสรรพสามิตกเก่า</th>
+                                    <th rowspan="2" style="text-align: center !important">เลขทะเบียนสรรพสามิตเก่า</th>
                                     <th rowspan="2">ชื่อผู้ประกอบการ</th>
                                     <th rowspan="2">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
                                     <th rowspan="2">ภาค</th>
